<resources>
    <string name="app_name">Bui365</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_handbook">Handbook</string>
    <string name="title_blog">Blog</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_profile">Profile</string>
    <string name="title_Hot">Hot</string>
    <string name="internet_failed">Internet Failed</string>
    <string name="network_timeout">Network Timeout</string>
    <string name="connection_failed">Connection Failed</string>
    <string name="title_detail">Detail</string>
    <string name="retry">Retry</string>
    <string name="facebook_app_id">2031686797065590</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="random_image">Random Image</string>
    <string name="txtLike">%1$d </string>
    <string name="txtComment">%1$d </string>
    <string name="txtComments">Comments</string>
    <string name="txtShare">%1$d </string>
    <string name="txtSearch">Search</string>
    <string name="txtErrorLoading">Error, please try again!</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="txtShareSuccess">Successful!</string>
    <string name="txtInputTitle">Input Title</string>
    <string name="coming_soon">Coming Soon…</string>
</resources>
