<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="8dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imgAvatar"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="8dp"
                android:scaleType="fitXY"
                android:src="@drawable/da_lat"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@color/primary_text"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imgAvatar"
                app:layout_constraintTop_toTopOf="@+id/imgAvatar" />

            <TextView
                android:id="@+id/txtTime"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_marginBottom="4dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@color/secondary_text"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/imgAvatar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imgAvatar" />

            <ImageView
                android:id="@+id/imgPicture"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="8dp"
                android:background="@color/little_grey"
                android:scaleType="fitXY"
                app:layout_constraintDimensionRatio="w,16:9"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgAvatar" />

            <ProgressBar
                android:id="@+id/progressCircle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/imgPicture"
                app:layout_constraintEnd_toEndOf="@+id/imgPicture"
                app:layout_constraintStart_toStartOf="@+id/imgPicture"
                app:layout_constraintTop_toTopOf="@+id/imgPicture" />

            <TextView
                android:id="@+id/txtDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:ellipsize="end"
                android:maxLines="3"
                app:layout_constraintTop_toBottomOf="@+id/imgPicture" />

            <View
                android:id="@+id/line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="@color/little_grey"
                app:layout_constraintTop_toBottomOf="@id/txtDescription" />

            <TextView
                android:id="@+id/txtLike"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:drawableStart="@drawable/ic_favorite_black_24dp"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/txtLike"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/line" />

            <TextView
                android:id="@+id/txtComment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:drawableStart="@drawable/ic_comment_white_24dp"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/txtComment"
                app:layout_constraintStart_toEndOf="@+id/txtLike"
                app:layout_constraintTop_toTopOf="@+id/txtLike" />

            <TextView
                android:id="@+id/txtShare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:drawablePadding="8dp"
                android:drawableStart="@drawable/ic_share_black_24dp"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/txtShare"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/line" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>